--- a/static/index.html
+++ b/static/index.html
@@ -16,5 +16,10 @@
 <input type="submit" id="login" value="Log in">
 <br>
 <input type="submit" id="logout" value="Log out">
+<br>
+<input type="submit" id="start" value="Start game">
+<br>
+<input type="submit" id="sready" value="Speaker ready">
+<input type="submit" id="lready" value="Listener ready">
 </body>
 </html>
