WIP (but sometimes segfaults happen)

--- a/static/index.html
+++ b/static/index.html
@@ -21,5 +21,10 @@
 <br>
 <input type="submit" id="sready" value="Speaker ready">
 <input type="submit" id="lready" value="Listener ready">
+<br>
+<input type="text" id="endexplcause" cols=40 rows=1 placeholder="cause">
+<input type="submit" id="endexpl" value="EndExplanation">
+<br>
+<input type="submit" id="wordsedited" value="Words edited">
 </body>
 </html>
